--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -20,7 +20,7 @@ header.masthead {
     .intro-heading {
       font-size: 50px;
       font-weight: 700;
-      line-height: 50px;
+      line-height: 60px;
       margin-bottom: 25px;
       @include heading-font;
     }
